[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.5"
sqlx = "0.8.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"

[dev-dependencies]
reqwest = "0.12.5"
